--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
         }
     }
 </style>
-<title>Northstar Capitals</title>
+<title>North Star Capital Partners</title>
 </head>
 <body>
 
 <div class="hero-image">
     <div class="hero-text">
         <h1>Site under maintenance.</h1>
-        <h2>The Northstar Capitals site is temporarily unavailable for regular access.</h2>
+        <h2>The North Star Capital Partners site is temporarily unavailable for regular access.</h2>
     </div>
 </div>
 </body>
